--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -76,6 +76,15 @@
 </section>
 
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
+<div class="col-sm-4">
+	<div>
+		<form action="/venues/{{venue.id}}" method="POST">
+			<button class="btn btn-danger btn-lg" type="submit">Delete</button>
+		</form>
+	</div>
+
+</div>
+
 
 {% endblock %}
 
